prepare for vcard updates, which includes database changes; also renamed --name to --label

--- a/manual/muttvcardsearch.man
+++ b/manual/muttvcardsearch.man
@@ -19,7 +19,7 @@ It may be used to query any vcard ressource implementing the CardDAV standard.
 .IP --create-local-cache
 This option downloads all vcards from all configured vcard ressources and stores them all together in a single sqlite3 database.
 
-.IP --name=...
+.IP --label=...
 Specifies a lable for a set of options. This lable will later be used to identify a particular block of settings to show and/or update the values.
 
 .IP --server=...
