--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,9 @@ The following people contribute or have contributed
 to the muttvcardsearch project:
 
 Main Developer:
+- Ike Devolder
+
+Original Developer:
 - Torsten Flammiger
 
 Contributors:
